--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-es6-transpiler": "^1.0.2",
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
     "grunt-jscs": "^1.8.0",
@@ -31,6 +32,7 @@
     "karma": "^1.2.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
+    "load-grunt-tasks": "^3.5.2",
     "phantomjs-prebuilt": "^2.1.12",
     "time-grunt": "^1.0.0"
   },
